--- a/projects/index.html
+++ b/projects/index.html
@@ -68,6 +68,8 @@ dreamtA A dreamy transit client for NYC Subways. It&rsquo;s outrageously lightwe
 <p><a href="https://github.com/tojimjiang/unsuppress"><strong>unsupress</strong></a> A chrome extension for one specific e-commerce website to make it a bit less sleazy. It pulls back the curtain on how many &ldquo;refurbished like new 10/10 iPhones NOT FOR USA LOCKED&rdquo; that the seller actually has listed on the platform.</p>
 <p><a href="https://dreamta.glitch.me"><strong>dreamtA</strong></a>
 A dreamy transit client for NYC Subways. It&rsquo;s outrageously lightweight and powerful *when the MTA isn&rsquo;t lying about where the trains are. <em>hosted on Glitch</em></p>
+<p><a href="https://spearfish.glitch.me"><strong>spearfish</strong></a>
+Just a nifty website to fish for better prices at the red big box store. Yes, their pricing engine actually does have this flaw, and actually will just let you order products at a given price by manipulating their pricing gun. <em>hosted on Glitch</em></p>
 <h1 id="ancient-ui-stuff">&ldquo;Ancient&rdquo; UI Stuff</h1>
 <p><a href="https://zero.jimjiang.com/clord/index.html"><strong>Word Based Clock</strong></a>
 You don&rsquo;t need to <strong>buy</strong> a word clock, when you can just emulate it in your browser with Local User Time and some JS magic to stay in sync and beautiful. Currently only available in dark mode. <em>hosted on static GH Pages</em></p>
