--- a/about/resume/index.html
+++ b/about/resume/index.html
@@ -32,8 +32,8 @@
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Resume"/>
-<meta name="twitter:description" content="Download the PDF of this resume.
-Just my living HTML resume. With just a pop of ink as a break to the predictability. psst - I&rsquo;m printable in desktop browser!
+<meta name="twitter:description" content="Just my living HTML resume. With just a pop of ink as a break to the predictability. psst - I&rsquo;m printable in desktop browser!
+Download the PDF of this resume.
 Jim JiangComputer Scientist
 Software Engineer
 Full Stack Developer
@@ -43,8 +43,8 @@ Bachelors in Computer Science Minors in Chemistry and Web Development and Applic
 Completed Coursework in Full Stack Web Development, Algorithms, Operating Systems, Computers Systems Organization, Computer Networks, Open Source Software, and Object Oriented Programming."/>
 
 <meta property="og:title" content="Resume" />
-<meta property="og:description" content="Download the PDF of this resume.
-Just my living HTML resume. With just a pop of ink as a break to the predictability. psst - I&rsquo;m printable in desktop browser!
+<meta property="og:description" content="Just my living HTML resume. With just a pop of ink as a break to the predictability. psst - I&rsquo;m printable in desktop browser!
+Download the PDF of this resume.
 Jim JiangComputer Scientist
 Software Engineer
 Full Stack Developer
@@ -78,8 +78,8 @@ Completed Coursework in Full Stack Web Development, Algorithms, Operating System
     
     <main class="wrap">
         
-        <article role="article" class="flex-container"><p><a href="/files/resume_jim_jiang.pdf">Download the PDF of this resume.</a></p>
-<p>Just my living HTML resume. With just a pop of ink as a break to the predictability.  <em>psst - I&rsquo;m printable in desktop browser!</em></p>
+        <article role="article" class="flex-container"><p>Just my living HTML resume. With just a pop of ink as a break to the predictability.  <em>psst - I&rsquo;m printable in desktop browser!</em></p>
+<p><a href="/files/resume_jim_jiang.pdf">Download the PDF of this resume.</a></p>
 
   
   
