--- a/projects/index.html
+++ b/projects/index.html
@@ -32,12 +32,12 @@
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
-<meta name="twitter:description" content="Breaking Stuff unsupress A chrome extension for one specific e-commerce website to make it a bit less sleazy. It pulls back the curtain on how many &ldquo;refurbished like new 10/10 iPhones NOT FOR USA LOCKED&rdquo; that the seller actually has listed on the platform.
-dreamtA A dreamy transit client for NYC Subways. It&rsquo;s outrageously lightweight and powerful *when the MTA isn&rsquo;t lying about where the trains are. hosted on Glitch"/>
+<meta name="twitter:description" content="🔍Nice to see you taking a peek at my projects that I have done in my spare time. Some of these are just me playing around, others are to solve a quality of life issue in my own life in the technology or services that I might use everyday. Take a peek at what a few carefully placed needles can do 😉.
+Breaking Stuff Some tools that some other parties might not want to really exist."/>
 
 <meta property="og:title" content="About" />
-<meta property="og:description" content="Breaking Stuff unsupress A chrome extension for one specific e-commerce website to make it a bit less sleazy. It pulls back the curtain on how many &ldquo;refurbished like new 10/10 iPhones NOT FOR USA LOCKED&rdquo; that the seller actually has listed on the platform.
-dreamtA A dreamy transit client for NYC Subways. It&rsquo;s outrageously lightweight and powerful *when the MTA isn&rsquo;t lying about where the trains are. hosted on Glitch" />
+<meta property="og:description" content="🔍Nice to see you taking a peek at my projects that I have done in my spare time. Some of these are just me playing around, others are to solve a quality of life issue in my own life in the technology or services that I might use everyday. Take a peek at what a few carefully placed needles can do 😉.
+Breaking Stuff Some tools that some other parties might not want to really exist." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://jimjiang.com/projects/" />
 
@@ -64,14 +64,17 @@ dreamtA A dreamy transit client for NYC Subways. It&rsquo;s outrageously lightwe
     
     <main class="wrap">
         
-        <article role="article" class="flex-container"><h1 id="breaking-stuff">Breaking Stuff</h1>
-<p><a href="https://github.com/tojimjiang/unsuppress"><strong>unsupress</strong></a> A chrome extension for one specific e-commerce website to make it a bit less sleazy. It pulls back the curtain on how many &ldquo;refurbished like new 10/10 iPhones NOT FOR USA LOCKED&rdquo; that the seller actually has listed on the platform.</p>
+        <article role="article" class="flex-container"><p>🔍Nice to see you taking a peek at my projects that I have done in my spare time. Some of these are just me playing around, others are to solve a quality of life issue in my own life in the technology or services that I might use everyday. Take a peek at what a few carefully placed needles can do 😉.</p>
+<h1 id="breaking-stuff">Breaking Stuff</h1>
+<p>Some tools that some other parties might not want to really exist. But hey, the endpoints are there for the taking. 😈<br>
+<a href="https://github.com/tojimjiang/unsuppress"><strong>unsupress</strong></a> A chrome extension for one specific e-commerce website to make it a bit less sleazy. It pulls back the curtain on the real quantity that the seller actually has listed on the platform (and is committed to selling as this moment).</p>
 <p><a href="https://dreamta.glitch.me"><strong>dreamtA</strong></a>
 A dreamy transit client for NYC Subways. It&rsquo;s outrageously lightweight and powerful *when the MTA isn&rsquo;t lying about where the trains are. <em>hosted on Glitch</em></p>
 <p><a href="https://spearfish.glitch.me"><strong>spearfish</strong></a>
 Just a nifty website to fish for better prices at the red big box store. Yes, their pricing engine actually does have this flaw, and actually will just let you order products at a given price by manipulating their pricing gun. <em>hosted on Glitch</em></p>
 <h1 id="ancient-ui-stuff">&ldquo;Ancient&rdquo; UI Stuff</h1>
-<p><a href="https://zero.jimjiang.com/clord/index.html"><strong>Word Based Clock</strong></a>
+<p>Just some of my earlier work that was more self contained and didn&rsquo;t really bother others. Mostly just to show the flexibility and responsiveness of well designed JavaScript.
+<a href="https://zero.jimjiang.com/clord/index.html"><strong>Word Based Clock</strong></a>
 You don&rsquo;t need to <strong>buy</strong> a word clock, when you can just emulate it in your browser with Local User Time and some JS magic to stay in sync and beautiful. Currently only available in dark mode. <em>hosted on static GH Pages</em></p>
 <p><a href="https://zero.jimjiang.com/ledemu/index.html"><strong>Dot Matrix LED Emulator</strong></a>
 Why spend time soldering LEDs when you can just use your browser to just <em>emulate</em> a dot-matrix LED display in <strong>full RGB glory</strong>. Create your custom colors and designs or just use Text-to-Display for some quick dot-matric messages. <em>hosted on static GH Pages</em></p>
