--- a/projects/index.html
+++ b/projects/index.html
@@ -32,11 +32,11 @@
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
-<meta name="twitter:description" content="🔍Nice to see you taking a peek at my projects that I have done in my spare time. Some of these are just me playing around, others are to solve a quality of life issue in my own life in the technology or services that I might use everyday. Take a peek at what a few carefully placed needles can do 😉.
+<meta name="twitter:description" content="🔍Nice to see you taking a peek at my projects that I have done in my spare time. Some of these are just me playing around, others are to solve a quality of life issue in my own life in the technologies or services that I might use everyday. Take a peek at what a few carefully placed needles can do 😉.
 Breaking Stuff Some tools that some other parties might not want to really exist."/>
 
 <meta property="og:title" content="About" />
-<meta property="og:description" content="🔍Nice to see you taking a peek at my projects that I have done in my spare time. Some of these are just me playing around, others are to solve a quality of life issue in my own life in the technology or services that I might use everyday. Take a peek at what a few carefully placed needles can do 😉.
+<meta property="og:description" content="🔍Nice to see you taking a peek at my projects that I have done in my spare time. Some of these are just me playing around, others are to solve a quality of life issue in my own life in the technologies or services that I might use everyday. Take a peek at what a few carefully placed needles can do 😉.
 Breaking Stuff Some tools that some other parties might not want to really exist." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://jimjiang.com/projects/" />
@@ -64,7 +64,7 @@ Breaking Stuff Some tools that some other parties might not want to really exist
     
     <main class="wrap">
         
-        <article role="article" class="flex-container"><p>🔍Nice to see you taking a peek at my projects that I have done in my spare time. Some of these are just me playing around, others are to solve a quality of life issue in my own life in the technology or services that I might use everyday. Take a peek at what a few carefully placed needles can do 😉.</p>
+        <article role="article" class="flex-container"><p>🔍Nice to see you taking a peek at my projects that I have done in my spare time. Some of these are just me playing around, others are to solve a quality of life issue in my own life in the technologies or services that I might use everyday. Take a peek at what a few carefully placed needles can do 😉.</p>
 <h1 id="breaking-stuff">Breaking Stuff</h1>
 <p>Some tools that some other parties might not want to really exist. But hey, the endpoints are there for the taking. 😈<br>
 <a href="https://github.com/tojimjiang/unsuppress"><strong>unsupress</strong></a> A chrome extension for one specific e-commerce website to make it a bit less sleazy. It pulls back the curtain on the real quantity that the seller actually has listed on the platform (and is committed to selling as this moment).</p>
