--- a/projects/index.html
+++ b/projects/index.html
@@ -73,7 +73,7 @@ A dreamy transit client for NYC Subways. It&rsquo;s outrageously lightweight and
 <p><a href="https://spearfish.glitch.me"><strong>spearfish</strong></a>
 Just a nifty website to fish for better prices at the red big box store. Yes, their pricing engine actually does have this flaw, and actually will just let you order products at a given price by manipulating their pricing gun. <em>hosted on Glitch</em></p>
 <h1 id="ancient-ui-stuff">&ldquo;Ancient&rdquo; UI Stuff</h1>
-<p>Just some of my earlier work that was more self contained and didn&rsquo;t really bother others. Mostly just to show the flexibility and responsiveness of well designed JavaScript.
+<p>Just some of my earlier work that was more self contained and didn&rsquo;t really bother others. Mostly just to show the flexibility and responsiveness of well designed JavaScript.<br>
 <a href="https://zero.jimjiang.com/clord/index.html"><strong>Word Based Clock</strong></a>
 You don&rsquo;t need to <strong>buy</strong> a word clock, when you can just emulate it in your browser with Local User Time and some JS magic to stay in sync and beautiful. Currently only available in dark mode. <em>hosted on static GH Pages</em></p>
 <p><a href="https://zero.jimjiang.com/ledemu/index.html"><strong>Dot Matrix LED Emulator</strong></a>
