get some more style points

--- a/projects/index.html
+++ b/projects/index.html
@@ -11,10 +11,13 @@
 <meta name="referrer" content="no-referrer">
 <meta name="theme-color" content="#39424E">
 
+<meta name="description" content="Jim Jiang&#39;s excessively minimalist personal website.">
 <title>
     About - Jim Jiang
 </title>
 
+
+<link rel="shortcut icon" href="/favicon.ico">
 
 
 
