--- a/about/index.html
+++ b/about/index.html
@@ -11,10 +11,13 @@
 <meta name="referrer" content="no-referrer">
 <meta name="theme-color" content="#39424E">
 
+<meta name="description" content="Jim Jiang&#39;s excessively minimalist personal website.">
 <title>
     About - Jim Jiang
 </title>
 <link href="/about/index.xml" rel="alternate" type="application/rss+xml" title="Jim Jiang" />
+
+<link rel="shortcut icon" href="/favicon.ico">
 
 
 
@@ -33,10 +36,10 @@
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
-<meta name="twitter:description" content=""/>
+<meta name="twitter:description" content="Jim Jiang&#39;s excessively minimalist personal website."/>
 
 <meta property="og:title" content="About" />
-<meta property="og:description" content="" />
+<meta property="og:description" content="Jim Jiang&#39;s excessively minimalist personal website." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://jimjiang.com/about/" />
 
