--- a/about/contact/index.html
+++ b/about/contact/index.html
@@ -26,27 +26,14 @@
 
 
 
-<link rel="stylesheet" href="/css/main.min.353ca4aba7f8dd7881fd0d5dfb3060f96bcc2f6367a8e1a2cbaba5d330d4baeb.css" integrity="sha256-NTykq6f43XiB/Q1d&#43;zBg&#43;WvML2NnqOGiy6ul0zDUuus=" crossorigin="anonymous" media="screen">
+<link rel="stylesheet" href="/css/main.min.ae0617e52d7371228387cc78383f62afd487eb424f7c54f4b837617b089d7516.css" integrity="sha256-rgYX5S1zcSKDh8x4OD9ir9SH60JPfFT0uDdhewiddRY=" crossorigin="anonymous" media="screen">
 
 
 
 
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic">
 
-<meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Contact Info"/>
-<meta name="twitter:description" content="This page relies on JavaScript to work properly!Does not compute. Does not compute. My buffer is overflowing. My hard drive is scrambling. My fan is overheating.
-But really, JavaScript must be enabled for this page to fully load. Without it this page can not determine your user status.
-See My GitHubSee My LinkedIn "/>
-
-<meta property="og:title" content="Contact Info" />
-<meta property="og:description" content="This page relies on JavaScript to work properly!Does not compute. Does not compute. My buffer is overflowing. My hard drive is scrambling. My fan is overheating.
-But really, JavaScript must be enabled for this page to fully load. Without it this page can not determine your user status.
-See My GitHubSee My LinkedIn " />
-<meta property="og:type" content="article" />
-<meta property="og:url" content="https://jimjiang.com/about/contact/" />
-
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;375;400;450;500;550&display=swap">
 
 
     
