--- a/projects/index.html
+++ b/projects/index.html
@@ -26,25 +26,14 @@
 
 
 
-<link rel="stylesheet" href="/css/main.min.353ca4aba7f8dd7881fd0d5dfb3060f96bcc2f6367a8e1a2cbaba5d330d4baeb.css" integrity="sha256-NTykq6f43XiB/Q1d&#43;zBg&#43;WvML2NnqOGiy6ul0zDUuus=" crossorigin="anonymous" media="screen">
+<link rel="stylesheet" href="/css/main.min.ae0617e52d7371228387cc78383f62afd487eb424f7c54f4b837617b089d7516.css" integrity="sha256-rgYX5S1zcSKDh8x4OD9ir9SH60JPfFT0uDdhewiddRY=" crossorigin="anonymous" media="screen">
 
 
 
 
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic">
 
-<meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="About"/>
-<meta name="twitter:description" content="🔍Nice to see you taking a peek at my projects that I have done in my spare time. Some of these are just me playing around, others are to solve a quality of life issue in my own life in the technologies or services that I might use everyday. Take a peek at what a few carefully placed needles can do 😉.
-Breaking Stuff Some tools that some other parties might not want to really exist."/>
-
-<meta property="og:title" content="About" />
-<meta property="og:description" content="🔍Nice to see you taking a peek at my projects that I have done in my spare time. Some of these are just me playing around, others are to solve a quality of life issue in my own life in the technologies or services that I might use everyday. Take a peek at what a few carefully placed needles can do 😉.
-Breaking Stuff Some tools that some other parties might not want to really exist." />
-<meta property="og:type" content="article" />
-<meta property="og:url" content="https://jimjiang.com/projects/" />
-
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;375;400;450;500;550&display=swap">
 
 
     
