--- a/about/resume/index.html
+++ b/about/resume/index.html
@@ -66,7 +66,7 @@
 
 <div class="content allcenterer">
     <div id="resume-print" class="resume resume-page">
-        <div class=" resume-left-right-margin resume-header bg-color-4 contra-color-text resume-print-flex-grow resume-flex-align-end">
+        <div class=" resume-left-right-margin resume-header bg-color-4 contra-color-text resume-screen-flex-grow resume-print-flex-grow resume-flex-align-end">
             <h1 class='resume-name'>Jim Jiang</h1>
         </div>
         <div class="resume-top-bottom resume-left-right-margin resume-menu bg-color-2">
@@ -298,10 +298,10 @@
             </div>
             
         </div>
-        <div class="resume-top-bottom resume-left-right-margin resume-mid-header bg-color-4 contra-color-text resume-print-flex-grow">
+        <div class="resume-top-bottom resume-left-right-margin resume-mid-header bg-color-4 contra-color-text resume-screen-flex-grow resume-print-flex-grow">
             <h2 class="resume-mid-header-text">Reach Me</h2>
             <p class="resume-mid-header-basic-text">Get my contact info at <a href="/about/contact">jimjiang.com/about/contact</a>🔗 <span class="fine-print"><b></b><em>You may be served a captcha to verify you are human.</em></span></p>
-            <p class="resume-mid-header-basic-text non-contra-color-text hidden-text fine-print text-align-end">Version 21.06.02.21:45</p>
+            <p class="resume-mid-header-basic-text non-contra-color-text hidden-text fine-print text-align-end">Version 21.06.02.22:00</p>
         </div>
     </div>
 </div>
