--- a/about/resume-light/index.html
+++ b/about/resume-light/index.html
@@ -57,8 +57,8 @@
     
     <main class="wrap">
         
-        <article role="article" class="flex-container"><p><a href="/files/resume_jim_jiang_light.pdf">Download the PDF of this light resume.</a></p>
-<p>This living HTML resume is designed to use a lighter variation as compared to the <a href="/about/resume">classic resume</a> by limiting the use of background colors. <em>psst - I&rsquo;m printable in desktop browser!</em></p>
+        <article role="article" class="flex-container"><p>My living HTML resume designed to be lighter as compared to the <a href="/about/resume">classic resume</a> but still . <em>psst - I&rsquo;m printable in desktop browser!</em></p>
+<p><a href="/files/resume_jim_jiang_light.pdf">Download the PDF of this light resume.</a></p>
 <p>
   
   
@@ -289,7 +289,7 @@
         <div class="resume-top-bottom resume-left-right-margin resume-mid-header bg-color-4 contra-color-text resume-screen-flex-grow resume-print-flex-grow">
             <h2 class="resume-mid-header-text">Reach Me</h2>
             <p class="resume-mid-header-basic-text">Get my contact info at <a href="/about/contact">jimjiang.com/about/contact</a>🔗 <span class="fine-print"><b></b><em>You may be served a captcha to verify you are human.</em></span></p>
-            <p class="resume-mid-header-basic-text non-contra-color-text hidden-text fine-print text-align-end">Version 21.06.09.00:08</p>
+            <p class="resume-mid-header-basic-text non-contra-color-text hidden-text fine-print text-align-end">Version 21.06.09.00:28</p>
         </div>
     </div>
 </div>
