--- a/about/resume-light/index.html
+++ b/about/resume-light/index.html
@@ -288,8 +288,8 @@
         </div>
         <div class="resume-top-bottom resume-left-right-margin resume-mid-header bg-color-4 contra-color-text resume-screen-flex-grow resume-print-flex-grow">
             <h2 class="resume-mid-header-text">Reach Me</h2>
-            <p class="resume-mid-header-basic-text">Get my contact info at <a href="https:/jimjiang.com/about/contact">jimjiang.com/about/contact</a>🔗 <span class="fine-print"><b></b><em>You may be served a captcha to verify you are human.</em></span></p>
-            <p class="resume-mid-header-basic-text non-contra-color-text hidden-text fine-print text-align-end">Version 21.06.20.16:52</p>
+            <p class="resume-mid-header-basic-text">Get my contact info at <a href="https://jimjiang.com/about/contact">jimjiang.com/about/contact</a>🔗 <span class="fine-print"><b></b><em>You may be served a captcha to verify you are human.</em></span></p>
+            <p class="resume-mid-header-basic-text non-contra-color-text hidden-text fine-print text-align-end">Version 21.07.08.03:52</p>
         </div>
     </div>
 </div>
