--- a/about/hi/index.html
+++ b/about/hi/index.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html><html><head><title>https://jimjiang.com/about/contact/</title><link rel="canonical" href="https://jimjiang.com/about/contact/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://jimjiang.com/about/contact/" /></head></html>
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <title>https://jimjiang.com/about/contact/</title>
+    <link rel="canonical" href="https://jimjiang.com/about/contact/">
+    <meta name="robots" content="noindex">
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; url=https://jimjiang.com/about/contact/">
+  </head>
+</html>
