--- a/about/resume/index.html
+++ b/about/resume/index.html
@@ -25,7 +25,7 @@
 
 
 
-<link rel="stylesheet" href="/css/main.min.c5514d3530979d291f3497facc20da1cec870028dbc2a3630b64bab8721bbe49.css" integrity="sha256-xVFNNTCXnSkfNJf6zCDaHOyHACjbwqNjC2S6uHIbvkk=" crossorigin="anonymous" media="screen">
+<link rel="stylesheet" href="/css/main.min.1d90695387d9ae75a5e84ab6a8e58715cdd1d00ee46241d68da2ae78246e0c37.css" integrity="sha256-HZBpU4fZrnWl6Eq2qOWHFc3R0A7kYkHWjaKueCRuDDc=" crossorigin="anonymous" media="screen">
 
 
 
@@ -37,8 +37,9 @@
 
 
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic">
 
+ <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;375;400;450;500;550&display=swap">
+ 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Resume"/>
 <meta name="twitter:description" content="My living HTML resume, with ink to break the tedium. But if this is too much ink, a lighter version of this resume is available here. psst - I&rsquo;m printable in desktop browser!
@@ -341,7 +342,7 @@ Completed Coursework in Full Stack Web Development, Algorithms, Operating System
                 <div class="resume-right-margin-reduced-qrcode flex-shrink-0">
                     
                     <p class="resume-mid-header-basic-text super-fine-print non-contra-color-text hidden-text text-align-end">
-                        Version 22.07.05.13:40
+                        Version 22.07.05.13:49
                     </p>
                 </div>
             
