--- a/projects/index.html
+++ b/projects/index.html
@@ -25,7 +25,7 @@
 
 
 
-<link rel="stylesheet" href="/css/main.min.c5514d3530979d291f3497facc20da1cec870028dbc2a3630b64bab8721bbe49.css" integrity="sha256-xVFNNTCXnSkfNJf6zCDaHOyHACjbwqNjC2S6uHIbvkk=" crossorigin="anonymous" media="screen">
+<link rel="stylesheet" href="/css/main.min.1d90695387d9ae75a5e84ab6a8e58715cdd1d00ee46241d68da2ae78246e0c37.css" integrity="sha256-HZBpU4fZrnWl6Eq2qOWHFc3R0A7kYkHWjaKueCRuDDc=" crossorigin="anonymous" media="screen">
 
 
 
@@ -37,8 +37,9 @@
 
 
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic">
 
+ <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;375;400;450;500;550&display=swap">
+ 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
 <meta name="twitter:description" content="🔍Nice to see you taking a peek at my projects that I have done in my spare time. Some of these are just me playing around, others are to solve a quality of life issue in my own life in the technologies or services that I might use everyday. Take a peek at what a few carefully placed needles can do 😉.
