--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 
-<link rel="stylesheet" href="/css/main.min.1d90695387d9ae75a5e84ab6a8e58715cdd1d00ee46241d68da2ae78246e0c37.css" integrity="sha256-HZBpU4fZrnWl6Eq2qOWHFc3R0A7kYkHWjaKueCRuDDc=" crossorigin="anonymous" media="screen">
+<link rel="stylesheet" href="/css/main.min.e3beb083ea6378b8881505b03d22ec39a76a750b624553b20ced09483c89ca90.css" integrity="sha256-476wg&#43;pjeLiIFQWwPSLsOadqdQtiRVOyDO0JSDyJypA=" crossorigin="anonymous" media="screen">
 
 
 
