--- a/projects/index.html
+++ b/projects/index.html
@@ -68,16 +68,16 @@
         <article role="article" class="flex-container"><p>🔍Nice to see you taking a peek at my projects that I have done in my spare time. Some of these are just me playing around, others are to solve a quality of life issue in my own life in the technologies or services that I might use everyday. Take a peek at what a few carefully placed needles can do 😉.</p>
 
 <h1 id="breaking-stuff" class="anchor-link"><a href="#breaking-stuff">Breaking Stuff<span class="pilcrow">&nbsp;¶</span></a></h1>
-<p>Some tools that some other parties might not want to really exist. But hey, the endpoints are there for the taking. 😈<br>
-<a href="https://github.com/tojimjiang/unsuppress"><strong>unsupress</strong></a> A chrome extension for one specific e-commerce website to make it a bit less sleazy. It pulls back the curtain on the real quantity that the seller actually has listed on the platform (and is committed to selling as this moment).</p>
-<p><a href="https://dreamta.glitch.me"><strong>dreamtA</strong></a>
-A dreamy transit client for NYC Subways. It&rsquo;s outrageously lightweight and powerful *when the MTA isn&rsquo;t lying about where the trains are. <em>hosted on Glitch</em></p>
+<p>Some tools that some other parties might not want to really exist. But hey, the endpoints are there for the taking. 😈</p>
+<p><a href="https://dreamta24.jimjiang.com"><strong>dreamtA</strong></a>
+*RECENTLY A dreamy transit client for NYC Subways. It&rsquo;s outrageously lightweight and powerful *when the MTA isn&rsquo;t lying about where the trains are. <em>now up 24/7</em></p>
 <p><a href="https://spearfish.glitch.me"><strong>spearfish</strong></a>
 Just a nifty website to fish for better prices at the red big box store. Yes, their pricing engine actually does have this flaw, and actually will just let you order products at a given price by manipulating their pricing gun. <em>hosted on Glitch</em></p>
 
 <h1 id="ancient-ui-stuff" class="anchor-link"><a href="#ancient-ui-stuff">&ldquo;Ancient&rdquo; UI Stuff<span class="pilcrow">&nbsp;¶</span></a></h1>
 <p>Just some of my earlier work that was more self contained and didn&rsquo;t really bother others. Mostly just to show the flexibility and responsiveness of well designed JavaScript.<br>
-<a href="https://zero.jimjiang.com/clord/index.html"><strong>Word Based Clock</strong></a>
+<a href="https://github.com/tojimjiang/unsuppress"><strong>unsupress</strong></a> A chrome extension for one specific e-commerce website to make it a bit less sleazy. It pulls back the curtain on the real quantity that the seller actually has listed on the platform (and is committed to selling as this moment).</p>
+<p><a href="https://zero.jimjiang.com/clord/index.html"><strong>Word Based Clock</strong></a>
 You don&rsquo;t need to <strong>buy</strong> a word clock, when you can just emulate it in your browser with Local User Time and some JS magic to stay in sync and beautiful. Currently only available in dark mode. <em>hosted on static GH Pages</em></p>
 <p><a href="https://zero.jimjiang.com/ledemu/index.html"><strong>Dot Matrix LED Emulator</strong></a>
 Why spend time soldering LEDs when you can just use your browser to just <em>emulate</em> a dot-matrix LED display in <strong>full RGB glory</strong>. Create your custom colors and designs or just use Text-to-Display for some quick dot-matric messages. <em>hosted on static GH Pages</em></p>
